--- a/zuul.d/edpm_multinode.yaml
+++ b/zuul.d/edpm_multinode.yaml
@@ -232,10 +232,102 @@
                 ip: 172.20.0.102
                 config_nm: false
 
+
+- job:
+    name: podified-multinode-hci-deployment-crc-3comp-crc-cloud
+    parent: podified-multinode-edpm-deployment-crc-cloud
+    nodeset: centos-9-medium-3x-centos-9-crc-cloud-ocp-4-16-xxl
+    vars:
+      cifmw_edpm_deploy_hci: true
+      crc_ci_bootstrap_cloud_name: "{{ nodepool.cloud | replace('-nodepool-tripleo','') }}"
+      crc_ci_bootstrap_networking:
+        networks:
+          default:
+            mtu: "{{ ('ibm' in nodepool.cloud) | ternary('1440', '1500') }}"
+            router_net: "{{ ('ibm' in nodepool.cloud) | ternary('hostonly', 'public') }}"
+            range: 192.168.122.0/24
+          internal-api:
+            vlan: 20
+            range: 172.17.0.0/24
+          storage:
+            vlan: 21
+            range: 172.18.0.0/24
+          tenant:
+            vlan: 22
+            range: 172.19.0.0/24
+          storage-mgmt:
+            vlan: 23
+            range: 172.20.0.0/24
+        instances:
+          controller:
+            networks:
+              default:
+                ip: 192.168.122.11
+          crc:
+            networks:
+              default:
+                ip: 192.168.122.10
+              internal-api:
+                ip: 172.17.0.5
+              storage:
+                ip: 172.18.0.5
+              tenant:
+                ip: 172.19.0.5
+              storage-mgmt:
+                ip: 172.20.0.5
+          compute-0:
+            networks:
+              default:
+                ip: 192.168.122.100
+              internal-api:
+                ip: 172.17.0.100
+                config_nm: false
+              storage:
+                ip: 172.18.0.100
+                config_nm: false
+              tenant:
+                ip: 172.19.0.100
+                config_nm: false
+              storage-mgmt:
+                ip: 172.20.0.100
+                config_nm: false
+          compute-1:
+            networks:
+              default:
+                ip: 192.168.122.101
+              internal-api:
+                ip: 172.17.0.101
+                config_nm: false
+              storage:
+                ip: 172.18.0.101
+                config_nm: false
+              tenant:
+                ip: 172.19.0.101
+                config_nm: false
+              storage-mgmt:
+                ip: 172.20.0.101
+                config_nm: false
+          compute-2:
+            networks:
+              default:
+                ip: 192.168.122.102
+              internal-api:
+                ip: 172.17.0.102
+                config_nm: false
+              storage:
+                ip: 172.18.0.102
+                config_nm: false
+              tenant:
+                ip: 172.19.0.102
+                config_nm: false
+              storage-mgmt:
+                ip: 172.20.0.102
+                config_nm: false
+
 - job:
     name: podified-multinode-hci-deployment-crc-1comp
     parent: podified-multinode-edpm-deployment-crc
-    nodeset: centos-9-medium-centos-9-crc-extracted-2-39-0-3xl
+    nodeset: centos-9-medium-centos-9-crc-cloud-ocp-4-16-3xl
     vars:
       cifmw_edpm_deploy_hci: true
       cifmw_cephadm_single_host_defaults: true
@@ -313,9 +405,138 @@
 - job:
     name: podified-multinode-edpm-deployment-crc
     parent: cifmw-podified-multinode-edpm-base-crc
+    timeout: 10800
+    attempts: 1
+    nodeset: centos-9-medium-centos-9-crc-cloud-ocp-4-16-3xl
     vars:
       cifmw_extras:
         - '@scenarios/centos-9/multinode-ci.yml'
+      crc_ci_bootstrap_cloud_name: "{{ nodepool.cloud | replace('-nodepool-tripleo','') }}"
+      crc_ci_bootstrap_networking:
+        networks:
+          default:
+            mtu: "{{ ('ibm' in nodepool.cloud) | ternary('1440', '1500') }}"
+            router_net: "{{ ('ibm' in nodepool.cloud) | ternary('hostonly', 'public') }}"
+            range: 192.168.122.0/24
+          internal-api:
+            vlan: 20
+            range: 172.17.0.0/24
+          storage:
+            vlan: 21
+            range: 172.18.0.0/24
+          tenant:
+            vlan: 22
+            range: 172.19.0.0/24
+        instances:
+          controller:
+            networks:
+              default:
+                ip: 192.168.122.11
+          crc:
+            networks:
+              default:
+                ip: 192.168.122.10
+              internal-api:
+                ip: 172.17.0.5
+              storage:
+                ip: 172.18.0.5
+              tenant:
+                ip: 172.19.0.5
+          compute-0:
+            networks:
+              default:
+                ip: 192.168.122.100
+              internal-api:
+                ip: 172.17.0.100
+                config_nm: false
+              storage:
+                ip: 172.18.0.100
+                config_nm: false
+              tenant:
+                ip: 172.19.0.100
+                config_nm: false
+          compute-1:
+            networks:
+              default:
+                ip: 192.168.122.101
+              internal-api:
+                ip: 172.17.0.101
+                config_nm: false
+              storage:
+                ip: 172.18.0.101
+                config_nm: false
+              tenant:
+                ip: 172.19.0.101
+                config_nm: false
+    run:
+      - ci/playbooks/edpm/run.yml
+
+- job:
+    name: podified-multinode-edpm-deployment-crc-cloud
+    parent: base-crc-cloud
+    timeout: 10800
+    attempts: 1
+    nodeset: centos-9-medium-centos-9-crc-cloud-ocp-4-16-3xl
+    vars:
+      cifmw_extras:
+        - '@scenarios/centos-9/multinode-ci.yml'
+      crc_ci_bootstrap_cloud_name: "{{ nodepool.cloud | replace('-nodepool-tripleo','') }}"
+      crc_ci_bootstrap_networking:
+        networks:
+          default:
+            mtu: "{{ ('ibm' in nodepool.cloud) | ternary('1440', '1500') }}"
+            router_net: "{{ ('ibm' in nodepool.cloud) | ternary('hostonly', 'public') }}"
+            range: 192.168.122.0/24
+          internal-api:
+            vlan: 20
+            range: 172.17.0.0/24
+          storage:
+            vlan: 21
+            range: 172.18.0.0/24
+          tenant:
+            vlan: 22
+            range: 172.19.0.0/24
+        instances:
+          controller:
+            networks:
+              default:
+                ip: 192.168.122.11
+          crc:
+            networks:
+              default:
+                ip: 192.168.122.10
+              internal-api:
+                ip: 172.17.0.5
+              storage:
+                ip: 172.18.0.5
+              tenant:
+                ip: 172.19.0.5
+          compute-0:
+            networks:
+              default:
+                ip: 192.168.122.100
+              internal-api:
+                ip: 172.17.0.100
+                config_nm: false
+              storage:
+                ip: 172.18.0.100
+                config_nm: false
+              tenant:
+                ip: 172.19.0.100
+                config_nm: false
+          compute-1:
+            networks:
+              default:
+                ip: 192.168.122.101
+              internal-api:
+                ip: 172.17.0.101
+                config_nm: false
+              storage:
+                ip: 172.18.0.101
+                config_nm: false
+              tenant:
+                ip: 172.19.0.101
+                config_nm: false
     run:
       - ci/playbooks/edpm/run.yml
 
@@ -331,9 +552,13 @@
       - ci/playbooks/edpm/run.yml
       - ci/playbooks/edpm/update.yml
 
+
+
+
+
 - job:
     name: podified-multinode-hci-deployment-crc
-    parent: podified-multinode-hci-deployment-crc-3comp
+    parent: podified-multinode-hci-deployment-crc-3comp-crc-cloud
     vars:
       cifmw_extras:
         - '@scenarios/centos-9/multinode-ci.yml'
