--- a/zuul.d/tempest_multinode.yaml
+++ b/zuul.d/tempest_multinode.yaml
@@ -1,10 +1,10 @@
 ---
 - job:
     name: cifmw-base-multinode-tempest
-    parent: cifmw-podified-multinode-edpm-base-crc
+    parent: cifmw-podified-multinode-edpm-base-crc-cloud
     timeout: 5400
     abstract: true
-    nodeset: centos-9-medium-crc-extracted-2-39-0-3xl
+    nodeset: centos-9-medium-centos-9-crc-cloud-ocp-4-16-3xl
     description: |
       Base multinode job definition for running test-operator.
     vars:
@@ -117,9 +117,41 @@
 - job:
     name: cifmw-multinode-tempest
     parent: podified-multinode-edpm-deployment-crc-tempest
+    nodeset: centos-9-medium-centos-9-crc-cloud-ocp-4-16-3xl
     files:
       - ^roles/test_operator
       - ^scenarios/centos-9/multinode-ci.yml
       - ^scenarios/centos-9/ci.yml
       - ^scenarios/centos-9/ceph_backends.yml
       - ^zuul.d/tempest_multinode.yaml
+    vars:
+      crc_ci_bootstrap_networking:
+        networks:
+          default:
+            range: 192.168.122.0/24
+            mtu: "{{ ('ibm' in nodepool.cloud) | ternary('1440', '1500') }}"
+            router_net: "{{ ('ibm' in nodepool.cloud) | ternary('hostonly', 'public') }}"
+          internal-api:
+            vlan: 20
+            range: 172.17.0.0/24
+          storage:
+            vlan: 21
+            range: 172.18.0.0/24
+          tenant:
+            vlan: 22
+            range: 172.19.0.0/24
+        instances:
+          controller:
+            networks:
+              default:
+                ip: 192.168.122.11
+          crc:
+            networks:
+              default:
+                ip: 192.168.122.10
+              internal-api:
+                ip: 172.17.0.5
+              storage:
+                ip: 172.18.0.5
+              tenant:
+                ip: 172.19.0.5
